fix on iphone hero

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -24,7 +24,13 @@ body {
     padding-top: 0 !important;
   }
 }
-
+.isApple {
+  @include r(488) {
+    .hero {
+      padding-top: 80px;
+    }
+  }
+}
 .container {
   padding: 0 30px;
   //  @include r(768) {
